# GEnum

./: .gitignore  Build_VisualStudio2019.bat  CMakeLists.txt  LICENSE.md  README.md
Source/: GEnum.cpp  GEnum.h  Main.cpp
Tests/: CMakeLists.txt  Test.cpp
Tests/TestEnums/: TestEnums.h
